created readme, worked on structure of page, added css to some elements, added background image

--- a/product.html
+++ b/product.html
@@ -5,11 +5,15 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Product Landing Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     
 </head>
 <body>
+    <div class="background">
     <header id="header">
+        <div class="logo">
+            <img id="header-img" src="bminus.png" alt="webdesign logo"/>
+        </div>
         <nav id="nav-bar">
             <ul>
                 <li><a class="nav-link" href="#first">First</a></li>
@@ -20,6 +24,39 @@
 
 
     </header>
+    
+
+    <div class="row0"></div>
+    <div class="row1">
+        <section id="main-text">
+            <h2>Choose B Minus Design to create your perfect website</h2>
+        </section>
+    </div>
+
+    <div class="row2">
+        <section id="features">
+            <div class="reason" id="one">
+                <h2>Transparent Pricing</h2>
+                <p>At B-Minus Design we believe in an honest low pricing system. You won't pay for stuff you don't need. Your wallet will be as healthy as your new website.</p>
+
+            </div>
+            <div class="reason" id="two">
+                <h2>Quality Design Skills</h2>
+                <p>Despite the name of our company, our design skills are A+</p>
+            </div>
+            <div class="reason" id="three">
+                <h2>Fast Turnaround</h2>
+                <p>It is possible to get fast service, quality work, and low cost all in the same package. How? Just hire B-Minus Design and find out.</p>
+            </div>
+        </section>
+    </div>
+
+    <div class="row3">
+    <section id="more-info">
+        <iframe id="video" height="200" width="700" src="putavideohereatsomepoint" allowfullscreen></iframe>
+    </section>
+    </div>
+    </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
