added more css and the contact form at the bottom of the page

--- a/product.html
+++ b/product.html
@@ -16,9 +16,9 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li><a class="nav-link" href="#first">First</a></li>
-                <li><a class="nav-link" href="#second">Second</a></li>
-                <li><a class="nav-link" href="#third">Third</a></li>
+                <li><a class="nav-link" href="#features">Why Us?</a></li>
+                <li><a class="nav-link" href="#more-info">Video</a></li>
+                <li><a class="nav-link" href="#form">Contact</a></li>
             </ul>
         </nav>
 
@@ -29,7 +29,7 @@
     <div class="row0"></div>
     <div class="row1">
         <section id="main-text">
-            <h2>Choose B Minus Design to create your perfect website</h2>
+            <h2>Why choose B Minus Design to create your perfect website?</h2>
         </section>
     </div>
 
@@ -42,7 +42,7 @@
             </div>
             <div class="reason" id="two">
                 <h2>Quality Design Skills</h2>
-                <p>Despite the name of our company, our design skills are A+</p>
+                <p>Despite the name of our company, our design skills are A+ and our work comes with a satisfaction guarantee to prove it!</p>
             </div>
             <div class="reason" id="three">
                 <h2>Fast Turnaround</h2>
@@ -53,8 +53,31 @@
 
     <div class="row3">
     <section id="more-info">
-        <iframe id="video" height="200" width="700" src="putavideohereatsomepoint" allowfullscreen></iframe>
+        <h2>See what makes B-Minus Design so special:</h2>
+        <iframe id="video" height="240" width="680" src="putavideohereatsomepoint" allowfullscreen></iframe>
     </section>
+    </div>
+
+    <div class="row4">
+        <h2>Let's get started on your project!</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <p>What kind of project is it?</p>
+            <select id="dropdown" name="project-type" required>
+                <option disabled selected value>Select the type of project</option>
+                <option value="Redesign old website">Redesign old website</option>
+                <option value="New business website">New business website</option>
+                <option value="New photography website">New photography website</option>
+                <option value="New shopping website">New shopping website</option>
+            </select>
+            <p>What is your name?</p>
+            <input id="name" type="text" placeholder="Enter your name" required/>
+            <p>What is your email?</p>
+            <input id="email" type="email" placeholder="Enter your email" required/>
+            <p>Do you want to give some more details about your project?</p>
+            <textarea id="details" placeholder="Give us a short description of your project"></textarea>
+            <input id="submit" type="submit" value="Get in touch!" class="btn"/>
+
+        </form>
     </div>
     </div>
 
